--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
 	"formulahendry.auto-rename-tag",
 	"steoates.autoimport",
 	"christian-kohler.path-intellisense",
-	"mhutchie.git-graph"
+	"mhutchie.git-graph",
+	"ms-python.vscode-pylance"
 ],
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
