--- a/back-end/.vscode/settings.json
+++ b/back-end/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "python.linting.pylintArgs": [
+        "--load-plugins=pylint_django",
+        "--errors-only",
+        "--django-settings-module=rest_api.settings"
+    ],
 }
