--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,5 +14,12 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "typescript": "^4.2.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.20.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
