--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/server": "^11.0.0",
+    "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^5.0.0-alpha.25",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "next": "10.0.7",
