--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -19,7 +19,9 @@
     "sourceType": "module"
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint"],
-  "rules": {},
+  "rules": {
+    "react/prop-types": "off"
+  },
   "settings": {
     "react": {
       "version": "detect"
