--- a/front-end/.prettierrc
+++ b/front-end/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "semi": false,
-  "trailingComma": "none",
-  "singleQuote": true
+  "trailingComma": "all",
+  "singleQuote": true,
+  "printWidth": 120
 }
