--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,7 +17,10 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "typescript": "^4.2.2"
+    "react-hook-form": "^6.15.4",
+    "swr": "^0.4.2",
+    "typescript": "^4.2.2",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.15.2",
