--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,9 @@
     "@emotion/react": "^11.1.5",
     "@emotion/server": "^11.0.0",
     "@emotion/styled": "^11.1.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^5.0.0-alpha.25",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
